# celery-abc

./: .gitignore  README.md  setup.cfg
src/: test.py
src/celery-abc/: caller.py
src/celery_abc/: __init__.py  caller.py  worker.py
src/examples/: example.py
tests/: docker-compose.yaml  test.py
tests/caller/: Dockerfile  run.sh  test_caller.py
tests/caller/src/: __init__.py  test_caller.py
tests/shared/: interface.py
tests/worker/: Dockerfile  run.sh  test_worker.py
tests/worker/src/: __init__.py
