[metadata]
name = celery-abc
version = 0.0.1
author = Mikhail Khimukhin
author_email = greenblacksky@gmail.com
description = Create microservices with celery and abstract interfaces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GreenBlackSky/celery-abc
project_urls =
    Bug Tracker = https://github.com/GreenBlackSky/celery-abc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src